openapi: implement CRUD Players service
